add roles filtration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:sqlserver://DESKTOP-TPECO3Q\\SQLEXPRESS;databaseName=
 spring.datasource.username=Disshell
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
